--- a/polishness/templates/polishness/footer.html
+++ b/polishness/templates/polishness/footer.html
@@ -3,7 +3,6 @@
     footer {
         background-color: #343a40; /* Kolor tła stopki */
         color: white; /* Kolor tekstu */
-        padding: 20px 0; /* Wewnętrzny margines */
         text-align: center; /* Wyśrodkowanie tekstu */
     }
 
@@ -17,6 +16,12 @@
         color: #ff5733; /* Change color on hover */
         text-decoration: none;
         transform: translateY(-3px); /* Slightly raise the link on hover */
+    }
+
+    footer .row {
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding: 0px;            /* Internal padding */
     }
 
     /* Social Media Icon Styling */
@@ -57,17 +62,17 @@
 
 
 <!-- templates/footer.html -->
-<footer class="bg-dark text-white py-4">
+<footer class="bg-dark text-white py-3">
     <div class="container">
-        <div class="row">
+        <div class="row mt-0 mb-0">
             <!-- About Section -->
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                 <h4 style="font-weight: bold;">Misja:</h4>
                 <p>Pomoc w odkrywaniu Polski!</p>
             </div>
 
             <!-- Navigation Links -->
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                 <h4 style="font-weight: bold;">Przydatne linki:</h4>
                 <ul class="list-unstyled">
                     <li><a href="https://www.gov.pl/" class="text-white">Serwis Rzeczypospolitej Polskiej </a></li>
@@ -77,7 +82,7 @@
             </div>
 
             <!-- Social Media Links -->
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                 <h4 style="font-weight: bold;">Inne moje strony:</h4>
                 <a href="https://danielpalacz.pythonanywhere.com/" class="text-white mr-3">
                     <i class="fab"></i> Prywatna
@@ -85,7 +90,7 @@
             </div>
         </div>
 
-        <div class="row mt-4">
+        <div class="row mt-0 mb-0">
             <div class="col text-center">
                 <p class="mb-0">&copy; 2024 PYX Daniel Palacz. Wszystkie prawa zastrzeżone.</p>
             </div>
