decreases size of font in footer final message

--- a/polishness/templates/polishness/footer.html
+++ b/polishness/templates/polishness/footer.html
@@ -38,9 +38,9 @@
     }
 
     /* Footer Headings */
-    footer h5 {
+    footer h4 {
         font-size: 1.2rem;
-        margin-bottom: 15px;
+        margin: 4px;
         color: #ffffff;
     }
 
@@ -76,7 +76,7 @@
                 <h4 style="font-weight: bold;">Przydatne linki:</h4>
                 <ul class="list-unstyled">
                     <li><a href="https://www.gov.pl/" class="text-white">Serwis Rzeczypospolitej Polskiej </a></li>
-                    <li><a href="https://stat.gov.pl/" class="text-white">Główny urząd statystyczny</a></li>
+                    <li><a href="https://stat.gov.pl/" class="text-white">Główny Urząd Statystyczny</a></li>
                     <li><a href="https://zabytek.pl/pl/" class="text-white">Zabytek.pl</a></li>
                 </ul>
             </div>
@@ -92,7 +92,7 @@
 
         <div class="row mt-0 mb-0">
             <div class="col text-center">
-                <p class="mb-0">&copy; 2024 PYX Daniel Palacz. Wszystkie prawa zastrzeżone.</p>
+                <p class="mb-0" style="font-size: 0.8rem;">&copy; 2024 PYX Daniel Palacz. Wszystkie prawa zastrzeżone.</p>
             </div>
         </div>
     </div>
