--- a/polishness/templates/polishness/footer.html
+++ b/polishness/templates/polishness/footer.html
@@ -40,9 +40,11 @@
     /* Footer Headings */
     footer h4 {
         font-size: 1.2rem;
-        margin: 4px;
+        margin: 2px;
         color: #ffffff;
+        text-decoration: underline;
     }
+
 
     /* Optional: Custom underline animation for links */
     footer a::after {
@@ -62,7 +64,7 @@
 
 
 <!-- templates/footer.html -->
-<footer class="bg-dark text-white py-3">
+<footer class="bg-dark text-white py-2">
     <div class="container">
         <div class="row mt-0 mb-0">
             <!-- About Section -->
