--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -138,6 +138,10 @@
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
 
+    .card-body {
+		padding: 15px;            /* Internal padding */
+    }
+
     .card-body h4 a {
         color: #333;
         text-decoration: none;
