--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -133,7 +133,6 @@
     }
 
     .card:hover {
-        border-color: #007bff;
         transform: scale(1.02); /* Slightly enlarge the brand */
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
@@ -156,6 +155,30 @@
         font-size: 1.25rem;
     }
 
+
+    .table-striped tbody tr:nth-of-type(2n+1) {
+        background-color: #f0fff0; /* Delikatny zielony kolor */
+    }
+
+    .table-striped tbody tr:nth-of-type(2n+1):hover {
+        background-color: yellow;
+    }
+
+    .table-striped tbody tr:nth-child(even):hover {
+        background-color: yellow;
+    }
+    table tbody tr:nth-child(even) {
+        background-color: #d0e7f9; /* Mniej intensywny, delikatny niebieski */
+    }
+
+
+     .table-hover tbody tr:hover {
+        background-color: yellow;
+    }
+
+    .card:hover {
+        transform: scale(1.01); /* Slightly enlarge the brand */
+    }
 
     {% block style %}
     {% endblock %}
