adds fix for '/' strinf in templates

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -139,6 +139,7 @@
 
     .card-body {
 		padding: 10px;            /* Internal padding */
+		margin: 10px;            /* Internal margin */
     }
 
     .card-body h4 a {
