adds stylistic changes and description for 'Polska in nubers'

--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -12,7 +12,7 @@ poznajmypolske.pl
        <div class="row m-3">
            <div class="col-12 col-md-8 col-md-4">
                <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce.</h3>
-               <h3 class="text-start">Poniżej losowe polskie zdjęcie (portal unsplash.com).</h3>
+               <h3 class="text-start">Poniżej losowe polskie zdjęcie (unsplash.com).</h3>
            </div>
        </div>
        <hr>
