--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
 
     <title>
     {% block title %}
@@ -31,6 +33,7 @@
         body {
             display: flex;
             flex-direction: column;
+            font-family: 'Montserrat', sans-serif;
         }
 
         /* Wrapper zawartości zajmuje dostępną przestrzeń */
@@ -125,7 +128,7 @@
     }
 
     .card {
-        background-color: #f8f9fa;
+        background-color: #d0e7f7;
         border-radius: 8px;
         transition: all 0.3s ease;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -138,8 +141,8 @@
     }
 
     .card-body {
-		padding: 10px;            /* Internal padding */
-		margin: 10px;            /* Internal margin */
+		padding: 8px;            /* Internal padding */
+		margin: 8px;            /* Internal margin */
     }
 
     .card-body h4 a {
@@ -155,7 +158,6 @@
     .monument-title {
         font-size: 1.25rem;
     }
-
 
     .table-striped tbody tr:nth-of-type(2n+1) {
         background-color: #f0fff0; /* Delikatny zielony kolor */
