--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -16,19 +16,30 @@ poznajmypolske.pl
 {% block content %}
     <div class="row mt-4">
         <div class="col">
-            <h4 class="text-start">W tym miejscu przedstawiane są dane z <b><a style="color: black;" href="https://api-dbw.stat.gov.pl/apidocs/index.html">API Dziedzinowych Baz Wiedzy</a></b> Głównego Urzędu Statystycznego.  </h4>
+            <h4 class="text-start">W tym miejscu przedstawiane są tabelarycznie dane z <b><a style="color: black;" href="https://api-dbw.stat.gov.pl/apidocs/index.html">API Dziedzinowych Baz Wiedzy</a></b> Głównego Urzędu Statystycznego. Rozbudowany graficzny interfejs można znależć na stronie <b><a style="color: black;" href="https://dbw.stat.gov.pl/">GUSu</a></b>.</h4>
         </div>
     </div>
+    <hr>
+
     <div class="row mt-4">
-        <div class="col-12 col-md-8 col-md-4">
-            <h4 class="text-start">Wybierz poniżej kategorię, która Cię interesuje.</h4>
+        <div class="col">
+            <h4 class="text-start" style="text-decoration: underline;">Sposób korzystania ze strony: </h4>
+            <ul>
+                <li><h5 class="text-start">wybierz poniżej kategorię, która Cię interesuje a następnie, wybierz konkretny obszar danej kategorii</h5></li>
+                <li><h5 class="text-start">powtarzaj wybieranie obszaru aż pojawi się dedykowana przeglądarka dla danego obszaru (to oznacza, że danych obszar jest parametrem statystycznym)</h5></li>
+                <li><h5 class="text-start">w dedykowanej przeglądarce wybierz:</h5></li>
+                <ul>
+                            <li><h5 class="text-start">przekrój danych (można rozumieć jako sposób grupowania danych)</h5></li>
+                            <li><h5 class="text-start">okres czasowy (jednostka czasu według, której będą wyświetlane dane) i rok</h5></li>
+                    </ul>
+            </ul>
         </div>
     </div>
     <hr>
 
     <div class="row">
     {% for root_field in root_fields %}
-                     <div class="col-md-3">
+                     <div class="col-md-4 py-2">
                         <div class="card box-shadow" style="border: 2px solid #000;">
 
                             <div class="card-body">
