--- a/polishness/templates/polishness/poland_in_numbers_fields.html
+++ b/polishness/templates/polishness/poland_in_numbers_fields.html
@@ -6,14 +6,14 @@ poznajmypolske.pl
 
 
 {% block content %}
-    <div class="row m-2">
+    <div class="row py-4">
         <div class="col-12 col-md-8 col-md-4">
-            <h4 class="p-2 text-start">Wybierz poniżej obszar, który Cię interesuje.</h4>
+            <h4 class="text-start">Wybierz poniżej obszar, który Cię interesuje.</h4>
         </div>
     </div>
     <hr>
 
-    <div class="row m-2 p-2">
+    <div class="row">
     {% for field in fields %}
                      <div class="col-md-4">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
@@ -24,7 +24,7 @@ poznajmypolske.pl
     </div>
 
     {% endfor %}
-        <div class="row m-2 p-1">
+        <div class="row">
         {% for field in field_variables %}
                      <div class="col-md-4">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000;">
