adds stylistic changes, colors

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -105,18 +105,19 @@
 	}
 
     .custom-form {
-            border: 2px solid #343a40; /* Pogrubienie krawędzi formularza */
+            border: 3px solid #343a40; /* Pogrubienie krawędzi formularza */
             border-radius: 10px; /* Zaokrąglenie krawędzi formularza */
             padding: 20px; /* Padding wewnętrzny formularza */
+            background-color: #d0e7f7; /* Kolor tła */
     }
 
     /* Stylizacja fieldset */
     .custom-fieldset {
             border: 2px solid #343a40; /* Pogrubienie krawędzi fieldset */
             border-radius: 10px; /* Zaokrąglenie krawędzi fieldset */
-            padding: 15px; /* Padding wewnętrzny fieldset */
-            margin-bottom: 15px; /* Odstęp dolny fieldset */
-            background-color: #f8f9fa; /* Kolor tła fieldset */
+            padding: 0px; /* Padding wewnętrzny fieldset */
+            margin-bottom: 0px; /* Odstęp dolny fieldset */
+            background-color: #d0e7f7; /* Kolor tła fieldset */
     }
 
     .form-control.custom-rounded {
