--- a/polishness/templates/polishness/trips.html
+++ b/polishness/templates/polishness/trips.html
@@ -22,16 +22,16 @@ poznajmypolske.pl
     <form action="/trips/" method="post" class="custom-rounded custom-form">
         {% csrf_token %}
         <div class="row mb-3">
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 p-1">
                 <input type="text" name="locality" placeholder="...wpisz miejscowość..." class="form-control custom-rounded" autocomplete="off">
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 p-1">
                 <input type="text" name="parish" placeholder="...wpisz gminę..." class="form-control custom-rounded" autocomplete="off">
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 p-1">
                 <input type="text" name="county" placeholder="...wpisz powiat..." class="form-control custom-rounded" autocomplete="off">
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 p-1">
                 <input type="text" name="voivodeship" placeholder="...wpisz województwo..." class="form-control custom-rounded" autocomplete="off">
             </div>
         </div>
