adds stylistic changes for displaying stats data table

--- a/polishness/templates/polishness/poland_in_numbers_field_browser.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_browser.html
@@ -26,10 +26,10 @@ poznajmypolske.pl
     <div class="row">
         <!-- Pierwsza kolumna - Przekrój -->
         <div class="col-12 col-md-6">
-            <fieldset class="p-1 border custom-fieldset">
+            <fieldset class="p-2 border custom-fieldset">
                 <label for="przekroj__przekrojid__okresid" style="text-decoration: underline;">Przekrój [okres]:</label>
                 <select class="form-control custom-rounded" id="przekroj__przekrojid__okresid" name="przekroj__przekrojid__okresid" aria-label="Przekrój okres" required title="Proszę wybrać opcję w tym polu.">
-                    <option value="" disabled selected>Wybierz przekrój i okres</option>
+                    <option value="" disabled selected>Wybierz przekrój [okres]</option>
                     {% for item_section_period in section_periods %}
                         <option value="{{item_section_period.nazwa_przekroj}}__{{item_section_period.id_przekroj}}__{{item_section_period.id_okres}}__{{item_section_period.opis_okres}}">
                             {{item_section_period.nazwa_przekroj}} [{{item_section_period.opis_okres}}]
@@ -41,7 +41,7 @@ poznajmypolske.pl
 
         <!-- Druga kolumna - Wybór roku -->
         <div class="col-12 col-md-6 mb-3">
-            <fieldset class="p-1 border custom-fieldset">
+            <fieldset class="p-2 border custom-fieldset">
                 <label for="rok" style="text-decoration: underline;">Wybierz rok:</label>
                 <select class="form-control custom-rounded" id="rok" name="rok" aria-label="Wybierz rok" required title="Proszę wybrać opcję w tym polu.">
                     <option value="" disabled selected>Wybierz rok</option>
@@ -56,7 +56,7 @@ poznajmypolske.pl
     <!-- Przycisk Submit -->
     <div class="row">
         <div class="col-12 text-center">
-            <input type="submit" value="Przeglądaj" class="btn btn-primary px-4 btn-lg">
+            <input type="submit" value="Przeglądaj" class="btn btn-primary px-4 btn-lg" >
         </div>
     </div>
     </form>
