--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -9,17 +9,17 @@ poznajmypolske.pl
 
 {% if request.method == 'GET' %}
    <div class="home" id="home">
-       <br>
-       <div class="row m-2">
+       <div class="row m-1 py-2">
             <h2 align="left">Tutaj możesz skorzystać z wyszukiwarki zabytków.</h2>
 
        <hr>
        </div>
    </div>
 
+<div class="py-1">
 <form action="/monuments/" method="post" class="custom-rounded custom-form">
     {% csrf_token %}
-    <div class="row mb-3">
+    <div class="row mb-1">
         <div class="col-lg-3 col-md-6 col-sm-12 p-1">
             <input type="text" name="locality" placeholder="...wpisz miejscowość..." class="form-control custom-rounded" autocomplete="off">
         </div>
@@ -34,7 +34,7 @@ poznajmypolske.pl
         </div>
     </div>
 
-    <div class="row mb-3">
+    <div class="row mb-1">
     <div class="col-lg-8 col-md-8 col-sm-12 d-flex align-items-center">
         <label for="quantity" class="form-label mb-0 me-2">Maksymalna liczba wynikowych wierszy:</label>
         <input type="number" id="quantity" name="quantity" class="form-control custom-rounded" placeholder="...wpisz liczbę..." value="12" autocomplete="off" style="flex-grow: 1;">
@@ -44,8 +44,8 @@ poznajmypolske.pl
         </div>
     </div>
 </form>
-
-    <small>Wyszukiwarka rozróżnia duże i małe litery. Źródłem zabytków jest <a href="https://dane.gov.pl/pl/dataset/1130,rejestr-zabytkow-nieruchomych"> Rejestr zabytków nieruchomych</a>.</small>
+<small>Wyszukiwarka rozróżnia duże i małe litery. Źródłem zabytków jest <a href="https://dane.gov.pl/pl/dataset/1130,rejestr-zabytkow-nieruchomych"> Rejestr zabytków nieruchomych</a>.</small>
+</div>
 
 {% else %}
 
