--- a/polishness/templates/polishness/monument_single.html
+++ b/polishness/templates/polishness/monument_single.html
@@ -4,6 +4,16 @@
 poznajmypolske.pl
 {% endblock %}
 
+{% block style %}
+    .card:hover {
+        border-color: #007bff;
+        transform: scale(1.05); /* Slightly enlarge the brand */
+        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    }
+
+{% endblock %}
+
+
 {% block content %}
 
 
