--- a/polishness/templates/polishness/poland_in_numbers_field_browser.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_browser.html
@@ -8,6 +8,15 @@ poznajmypolske.pl
     .select-section {
         width: 40%; /* Zajmie 40% dostępnej szerokości */
     }
+
+
+  input[type="submit"] {
+    border-width: 2px;
+    border-style: solid;
+    border: 1px solid #000;
+  }
+
+
 {% endblock %}
 
 {% block content %}
@@ -39,6 +48,7 @@ poznajmypolske.pl
             </fieldset>
         </div>
 
+
         <!-- Druga kolumna - Wybór roku -->
         <div class="col-12 col-md-6 mb-3">
             <fieldset class="p-2 border custom-fieldset">
@@ -56,7 +66,7 @@ poznajmypolske.pl
     <!-- Przycisk Submit -->
     <div class="row">
         <div class="col-12 text-center">
-            <input type="submit" value="Przeglądaj" class="btn btn-primary px-4 btn-lg" >
+            <input type="submit" value="Przeglądaj" class="btn btn-dark btn-lg mt-3 custom-rounded" >
         </div>
     </div>
     </form>
