--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -7,7 +7,7 @@ poznajmypolske.pl
 {% block style %}
     .card:hover {
         border-color: #007bff;
-        transform: scale(1.1); /* Slightly enlarge the brand */
+        transform: scale(1.05); /* Slightly enlarge the brand */
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
 
@@ -37,9 +37,9 @@ poznajmypolske.pl
     </div>
     <hr>
 
-    <div class="row">
+    <div class="row m-2">
     {% for root_field in root_fields %}
-                     <div class="col-md-4 py-2">
+                     <div class="col-md-6 col-lg-4 py-1">
                         <div class="card box-shadow" style="border: 2px solid #000;">
 
                             <div class="card-body">
