changes search button to classic white style

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -209,10 +209,7 @@
     }
 
   input[type="submit"] {
-    border-width: 2px;
-    border-style: solid;
-    border: 6px solid #d6e9c6; /* Border in a darker shade of green */
-    color: #d6e9c6; /* a darker shade of green */
+    color: #FFF; /* a darker shade of green */
    }
 
    input[type="submit"]:hover {
