adds smaller stylistic changes

--- a/polishness/templates/polishness/trips.html
+++ b/polishness/templates/polishness/trips.html
@@ -10,11 +10,11 @@ poznajmypolske.pl
 {% block content %}
 
 {% if request.method == 'GET' %}
-   <div class="home" id="home">
-       <div class="row m-2">
-            <h2 align="left">Generator wycieczek.</h2>
-
-       <hr>
+   <div id="trips" class="mt-3">
+       <div class="row">
+            <div class="col">
+            <h2 align="left">Generator wycieczek:</h2>
+            </div>
        </div>
    </div>
 
