--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -9,15 +9,17 @@ poznajmypolske.pl
 {% block content %}
 
 {% if request.method == 'GET' %}
-   <div class="home" id="home">
-       <div class="row m-1 py-2">
-            <h2 align="left">Tutaj możesz skorzystać z wyszukiwarki zabytków.</h2>
+   <div class="mt-3" id="monuments">
 
+       <div class="row">
+           <div class="col">
+           <h2 class="mb-0" align="left">Tutaj możesz skorzystać z wyszukiwarki zabytków:</h2>
+           </div>
        <hr>
        </div>
    </div>
 
-<div class="py-1">
+<div class="m-1 py-1">
 <form action="/monuments/" method="post" class="custom-rounded custom-form">
     {% csrf_token %}
     <div class="row mb-1">
