adds smaller stylistic changes

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -209,7 +209,7 @@
     }
 
   input[type="submit"] {
-    color: #FFF; /* a darker shade of green */
+    color: #FFF;
    }
 
    input[type="submit"]:hover {
