--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -36,9 +36,9 @@ poznajmypolske.pl
         </div>
     </div>
 
-    <div class="row m-2">
+    <div class="row mt-2">
     {% for root_field in root_fields %}
-                     <div class="col-md-6 col-lg-4 py-1">
+                     <div class="col-md-6 col-lg-4 py-2">
                         <div class="card box-shadow" style="border: 2px solid #000;">
 
                             <div class="card-body">
