--- a/polishness/templates/polishness/monument_single.html
+++ b/polishness/templates/polishness/monument_single.html
@@ -7,9 +7,15 @@ poznajmypolske.pl
 {% block style %}
     .card:hover {
         border-color: #007bff;
-        transform: scale(1.05); /* Slightly enlarge the brand */
+        transform: scale(1.02); /* Slightly enlarge the brand */
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
+
+  .btn-primary:hover {
+    color: yellow;
+    text-decoration: underline;
+   }
+
 
 {% endblock %}
 
