improve style for table in poland in numbers

--- a/polishness/templates/polishness/poland_in_numbers_field_viewing.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_viewing.html
@@ -67,6 +67,11 @@ poznajmypolske.pl
         background-color: #87CEEB; /* Intensywny niebieski */
         border: 1px solid #000;
         border-bottom: 4px solid #000; /* Czarna dolna krawędź */
+        vertical-align: middle; /* Wyśrodkowanie pionowe */
+    }
+
+    .table thead th {
+        vertical-align: middle; /* Wyśrodkowanie pionowe */
     }
 
     table, th, td {
@@ -115,10 +120,10 @@ poznajmypolske.pl
                         <thead>
                             <tr>
                                 <th>Przekrój</th>
-                                <th>Wymiar-1 / pozycja-1</th>
-                                <th>Wymiar-2 / pozycja-2</th>
-                                <th>Okres</th>
-                                <th>Sposób reprezentacji (miara)</th>
+                                <th>Wymiar (1)</th>
+                                <th>Wymiar (2)</th>
+                                <th>Okres czasu</th>
+                                <th>Miara danych</th>
                                 <th>Wartość</th>
                             </tr>
                         </thead>
