--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -64,9 +64,9 @@ poznajmypolske.pl
             <div class="success">Znalezione zabytki:</div>
         </div>
     </div>
-    <div class="row m-2 p-2">
+    <div class="row m-4">
     {% for monument in monuments %}
-                     <div class="col-md-3">
+                     <div class="col-md-6 col-lg-4">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body">
