--- a/polishness/templates/polishness/poland_in_numbers_fields.html
+++ b/polishness/templates/polishness/poland_in_numbers_fields.html
@@ -13,7 +13,7 @@ poznajmypolske.pl
     </div>
     <hr class="mt-0">
 
-    <div class="row">
+    <div class="row m-2">
     {% for field in fields %}
                      <div class="col-md-6 col-lg-4 py-1">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
@@ -26,7 +26,7 @@ poznajmypolske.pl
     </div>
 
 
-        <div class="row">
+        <div class="row m-2">
         {% for field in field_variables %}
                      <div class="col-md-6 col-lg-4 py-1">
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000;">
