--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -22,7 +22,7 @@ poznajmypolske.pl
 <div class="m-1 py-1">
 <form action="/monuments/" method="post" class="custom-rounded custom-form">
     {% csrf_token %}
-    <div class="row mb-1">
+    <div class="row mb-1 p-2">
         <div class="col-lg-3 col-md-6 col-sm-12 p-1">
             <input type="text" name="locality" placeholder="...wpisz miejscowość..." class="form-control custom-rounded" autocomplete="off">
         </div>
@@ -37,7 +37,7 @@ poznajmypolske.pl
         </div>
     </div>
 
-    <div class="row mb-1">
+    <div class="row mb-3">
     <div class="col-lg-8 col-md-8 col-sm-12 d-flex align-items-center">
         <label for="quantity" class="form-label mb-0 me-2">Maksymalna liczba wynikowych wierszy:</label>
         <input type="number" id="quantity" name="quantity" class="form-control custom-rounded" placeholder="...wpisz liczbę..." value="12" autocomplete="off" style="flex-grow: 1;">
