--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -10,15 +10,15 @@ poznajmypolske.pl
 {% if photo_link %}
 
        <div class="row m-3">
-           <div class="col-12 col-md-8 col-md-4">
-               <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce.</h3>
-               <h3 class="text-start">Poniżej losowe polskie zdjęcie (unsplash.com).</h3>
+           <div class="col-12">
+               <h3 class="text-start">Cześć! Tu Daniel, a to jest moja strona o Polsce. Wizją jest tutaj pomoc w odkrywaniu naszego kraju poprzez dostarczanie prostych, ciekawych narzędzi.</h3>
            </div>
        </div>
        <hr>
 
        <div class="row m-3">
            <div class="col">
+                <h3 class="text-start">Poniżej losowe polskie zdjęcie (unsplash.com).</h3>
                 <a href="{{photo_link}}" download="pobrane_zdjecie.jpg">
                     <img class="card-img-top" src="{{photo_link}}" alt="Pobierz zdjęcie">
                 </a>
