--- a/polishness/templates/polishness/trips.html
+++ b/polishness/templates/polishness/trips.html
@@ -22,13 +22,13 @@ poznajmypolske.pl
    <div id="trips" class="mt-3">
        <div class="row">
            <div class="col">
-               <h4 align="left">Ideą strony jest promocja <strong>Generatorów wycieczek</strong>, czyli narzędzi pomagających zaplanować podróż, sugerując ciekawe trasy turystyczne. Poniżej znajdziesz kilka rekomendacji, gdzie możesz szukać takich generatorów.</h4>
+               <h4 align="left">Zamiarem strony jest promocja <strong>Generatorów wycieczek</strong>, czyli narzędzi pomagających zaplanować podróż, sugerując ciekawe trasy turystyczne. Poniżej znajdziesz kilka rekomendacji, gdzie możesz szukać takich generatorów.</h4>
            </div>
        </div>
 
        <div class="row mt-4">
            <div class="col">
-               <h3 style="font-weight: bold;">1. Polskie Portale Turystyczne</h3>
+               <h3 style="font-weight: bold;">Polskie Portale Turystyczne</h3>
                    <ul>
                         <li><a href="https://zabytek.pl/">Zabytek.pl</a> – serwis Narodowego Instytutu Dziedzictwa oferujący bogatą bazę miejsc dziedzictwa kulturowego, które można odwiedzić.</li>
                         <li><a href="https://www.polska.travel/">Polska Travel</a> – strona Polskiej Organizacji Turystycznej, gdzie znajdziesz inspiracje do podróży, a także gotowe propozycje tras i miejsc wartych odwiedzenia.</li>
@@ -40,7 +40,7 @@ poznajmypolske.pl
 
        <div class="row">
            <div class="col">
-                   <h3 style="font-weight: bold;">2. Aplikacje Mobilne</h3>
+                   <h3 style="font-weight: bold;">Aplikacje Mobilne</h3>
                     <ul>
                         <li><strong>Google Trips</strong> (integracja z Mapami Google) – funkcje planowania podróży dostępne bezpośrednio w Mapach Google, gdzie możesz tworzyć własne trasy, dodawać atrakcje i automatycznie dostosowywać plany.</li>
                         <li><a href="https://www.komoot.com/">Komoot</a> – aplikacja do planowania tras turystycznych pieszych i rowerowych, z możliwością wyznaczania tras w różnych regionach Polski.</li>
@@ -51,7 +51,7 @@ poznajmypolske.pl
 
        <div class="row">
            <div class="col">
-                   <h3 style="font-weight: bold;">3. Blogi i Strony Podróżnicze</h3>
+                   <h3 style="font-weight: bold;">Blogi i Strony Podróżnicze</h3>
                     <ul>
                         <li><a href="https://www.znajkraj.pl/">Znajkraj</a> – blog i portal poświęcony rowerowym wycieczkom po Polsce z trasami i propozycjami wycieczek.</li>
                         <li><a href="https://www.podroze.pl/">Podroze.pl</a> – portal oferujący artykuły z pomysłami na wycieczki po różnych regionach Polski.</li>
@@ -61,7 +61,7 @@ poznajmypolske.pl
 
        <div class="row mt-4">
             <div class="col">
-                <h3 style="font-weight: bold;">4. Prosty generator wycieczek - poznajmypolske.pl </h3>
+                <h3 style="font-weight: bold;">Prosty generator wycieczek - poznajmypolske.pl </h3>
 
             </div>
        </div>
